--- a/src/index-tablet.css
+++ b/src/index-tablet.css
@@ -75,26 +75,12 @@
         padding: 3em 1em 2em 2em;
     }
 
-    #how-form {
-        padding: 2em !important;
-        margin-bottom: 4em;
-        margin-top: 4em;
-        width: 300px;
-        max-width: 40vw;
-    }
-
     input {
         font-size: 0.8em !important;
     }
 
     .theme-btn {
         font-size: 0.8em !important;
-    }
-
-    /* who we are */
-    #who-we-are-L {
-        padding-top: 0 !important;
-        padding-left: 3em !important;
     }
 
     /* footer */
@@ -110,10 +96,6 @@
 
     .about-content-sub {
         margin-bottom: 2em !important;
-    }
-
-    .about-text-L {
-        padding-right: 2em !important;
     }
 
     .about-text-R {
@@ -160,5 +142,23 @@
         width: 250px !important;
         max-width: 90%;
         min-width: 10% !important;
+    }
+
+    /* toggle form */
+    @keyframes slide-form {
+        from {
+            padding: 0;
+            height: 0;
+            overflow: hidden;
+        }
+        to {
+            height: 520px;
+            overflow: hidden;
+        }
+    }
+
+    .form-toggle form {
+        animation-name: slide-form;
+        animation-duration: 0.2s;
     }
 }
