--- a/src/index.css
+++ b/src/index.css
@@ -161,6 +161,15 @@ body {
 .landing-btn:hover {
     color: white;
     font-weight: 700;
+    outline: none;
+}
+
+.landing-btn:active {
+    outline: none;
+}
+
+.landing-btn:focus {
+    outline: none;
 }
 
 #title {
@@ -189,34 +198,22 @@ body {
 
 /* who we are */
 #who-we-are {
-    padding: 5%;
-    background-color: #f1f2f4;
+    padding-top: 8em;
+    padding-bottom: 8em;
+    background: url('./images/who-we-are.png') no-repeat center center;
+    background-size: cover;
+    color: #ffffff;
+    text-align: center;
 }
 
-#who-we-are-L a {
-    display: block;
-    margin-top: 2em;
-}
-
-#who-we-are-L {
-    padding-top: 2em;
-    padding-left: 4em;
-}
-
-#who-we-are-L h2 {
+#who-we-are h1 {
     font-weight: 700;
 }
 
-#who-we-are-L p {
-    margin-top: 2em;
-    padding-left: 2em;
-    border-left: solid 4px #f07545;
-    width: 40vw;
-    margin-bottom: 2em;
-}
-
-#who-we-are-R {
-    text-align: center;
+#who-we-are-text {
+    width: 60vw;
+    line-height: 1.2em;
+    margin: 2em auto 2em auto;
 }
 
 /* service icons */
@@ -252,6 +249,7 @@ body {
     background-color: #f1f2f4;
     margin: 0;
     padding: 2em 4em 1em 4em;
+    z-index: 2 !important;
 }
 
 #footer .col {
@@ -297,9 +295,9 @@ body {
 }
 
 .about-content {
-    padding: 5%;
     background-color: #f8f8f9;
     padding-bottom: 10em;
+    margin-top: 0;
 }
 
 .about-content h2 {
@@ -307,18 +305,25 @@ body {
     margin-bottom: 1em;
 }
 
-.about-text-L {
-    width: 60%;
-    padding-right: 4em;
+.about-text p {
+    width: 60vw;
+    text-align: center;
+    margin: 10vh auto;
 }
 
-.about-text-R {
-    width: 60%;
-    padding-left: 4em;
+.about-vision-image {
+    width: 100%;
+    background: url('./images/about-img-1.jpg') no-repeat center center;
 }
 
 .about-img {
-    width: 40%;
+    margin-bottom: 4em;
+    width: 100%;
+    background: url('./images/about-img-2.jpg') no-repeat center center;
+}
+
+.about-vision-image h1 {
+    font-weight: 700;
 }
 
 .about-img img {
@@ -534,8 +539,7 @@ li p {
     background-size: 100% 200%;
     background-image: linear-gradient(to top, #f07545 50%, #1dbc98 50%);
     transition: background-position 0.2s;
-    padding: 0.8em 1em;
-    width: 10em;
+    padding: 0.8em 2em;
     border: none;
     color: white;
     font-weight: 600;
@@ -553,4 +557,62 @@ li p {
 .sub-page-icon-text {
     margin-top: 2em;
     font-weight: 600;
+}
+
+/* form toggle */
+.form-toggle {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    margin: 5%;
+    text-align: right;
+    z-index: 100000;
+}
+
+@keyframes slide-form {
+    from {
+        padding: 0;
+        height: 0;
+        overflow: hidden;
+    }
+    to {
+        height: 580px;
+        overflow: hidden;
+    }
+}
+
+.form-toggle form {
+    background-color: #ffffff;
+    padding: 2em;
+    margin-bottom: 2em;
+    border-radius: 4px;
+    box-shadow: 5px 5px 15px 0 rgba(0, 0, 0, 0.2);
+    width: 450px;
+    text-align: left;
+    animation-name: slide-form;
+    animation-duration: 0.2s;
+}
+
+.form-toggle form p {
+    margin-bottom: 2em;
+}
+.form-toggle-chat {
+    border-radius: 50%;
+    background-color: #1dbc98;
+    width: 5em;
+    height: 5em;
+    border: none;
+    outline: none;
+    text-align: center;
+    vertical-align: middle;
+    box-shadow: 5px 5px 15px 0 rgba(0, 0, 0, 0.2);
+}
+
+.form-toggle-chat:focus {
+    border: none;
+    outline: none;
+}
+.form-toggle-icon {
+    width: 2.5em;
+    padding-top: 0.5em;
 }
